notifications queries done
