# internal/server/server.go
@@ -66,6 +66,9 @@ func NewServer(pathToConfig string) (*Server, error) {
 	needLogin.Post(fmt.Sprintf("/deal/{deal_id:%s}/cancel", idPattern), server.CancelDeal)
 	subRouter.Get(fmt.Sprintf("/ad/{ad_id:%s}/deal", idPattern), server.GetDealForAd)
 
+	// notifications
+	needLogin.Get("/notifications", server.GetNotifications)
+
 	// user
 	subRouter.Post("/user/auth", server.AuthUser)
 	subRouter.Get(fmt.Sprintf("/user/{user_id:%s}", idPattern), server.GetUserInfo)
